# argentina_report

./: .gitignore  README.md  argentina_external_debt.py  build_report.py  fetch_bcra.py  fetch_imf.py  fetch_indec.py  fetch_worldbank.py  main.py  pull_data.py  pyproject.toml  requirements.txt  utils.py
.claude/: BLUEPRINT.md  CLAUDE.md  CODING_CHECKLIST.md  DATA_SOURCES.md  REPORT_BLUEPRINT.md  SKILL.md
.claude/SKILLS/: SKILL_inflation.md  SKILL_investment.md  SKILL_labor.md  SKILL_master.md  interpret-ca.md  (+1 more)
Finance Research/: _render.html  generate_pdf.py  report.css  template.html
consumption/: fetch.py  report.py  section.py
financing/: report.py
gdp/: fetch.py  section.py
inflation/: fetch.py  section.py
ingestion/: client.py  consumption.py  debt.py  debt_pdf.py  external.py  fetch_all.py  fiscal.py  fx.py  gdp.py  inflation.py  production.py  productivity.py  reserves.py  section.py
pdf_builder/: Macro Research Document.html  Macro Research Layouts.html  Macro Research Note.html  app.jsx  charts.jsx  doc-blocks.jsx  doc-config.jsx  doc-page.jsx  doc-styles.css  research-doc-app.jsx  research-note-app.jsx  sample-data.jsx  styles.css  variation-a.jsx  variation-b.jsx  variation-c.jsx
production/: fetch.py  section.py
productivity/: fetch.py  section.py
report/: build.py  closing_synthesis.py  executive_summary.py  pdf_base.py  signal_text.py  weekly_diff.py
signals/: credit.py  external.py  fiscal.py  fx.py  inflation.py  investment.py  labor.py  master.py  production.py  wages.py
svar/: charts.py  data_prep.py  model.py  run.py  section.py
(+43 files in other folders)
