[project]
name = "argentina-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "playwright>=1.60.0",
    "requests>=2.33.1",
    "statsmodels>=0.14.6",
    "weasyprint>=68.1",
    "xhtml2pdf>=0.2.17",
    "xlrd>=2.0.2",
]
